--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/poetez/poetez-ts-lib-boilerplate#readme",
   "devDependencies": {
+    "@types/is-plain-object": "^0.0.2",
     "@types/jasmine": "^2.5.47",
     "awesome-typescript-loader": "^3.1.3",
     "codecov": "^2.2.0",
@@ -61,6 +62,8 @@
     "webpack": "^2.5.1"
   },
   "dependencies": {
+    "is-plain-object": "^2.0.1",
+    "rxjs": "^5.4.0",
     "tslib": ">=1.7.0"
   }
 }
