build(lintstaged): add checking spec directory

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,5 @@
 {
   "src/**/*.ts": ["yarn run lint -- --fix", "git add"],
+  "spec/**/*.ts": ["yarn run lint -- --fix", "git add"],
   "config/**/*.js": ["eslint --fix", "git add"]
 }
