--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
   },
   "dependencies": {
     "is-plain-object": "^2.0.1",
-    "rxjs": "^5.4.0",
     "tslib": ">=1.7.0"
+  },
+  "peerDependencies": {
+    "rxjs": "^5.4.0"
   }
 }
