--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "clean": "rimraf commonjs es umd coverage",
     "lint": "tslint src/**/*.ts --type-check -p tsconfig.json -t verbose",
-    "check-es3": "check-es3-syntax lib/ build/ --kill --print",
     "test": "nodemon --watch src --watch spec -e ts --exec \"yarn run test:single\"",
     "test:single": "jasmine --config=jasmine.json",
     "test:cover": "nyc yarn run test:single",
@@ -19,7 +18,7 @@
     "build:umd": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack --config=config/webpack.prod.js",
     "build": "yarn run build:commonjs && yarn run build:es && yarn run build:umd && yarn run build:umd:min",
-    "_prepublish": "yarn run clean && yarn run lint && yarn run test:single && yarn run build && yarn run check-es3",
+    "_prepublish": "yarn run clean && yarn run lint && yarn run test:single && yarn run build",
     "precommit": "lint-staged"
   },
   "repository": {
