--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ cache:
   yarn: true
   directories:
     - node_modules
-script: yarn run test:single
+script: yarn run test:cover
 after_success:
 - cat coverage/lcov.info | ./node_modules/.bin/codecov
