--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "lazyx",
   "version": "0.1.0",
   "description": "RxJS-based predictable state container for JavaScript applications",
-  "main": "es/index.js",
+  "main": "./commonjs/index.js",
+  "module": "es/index.js",
+  "jsnext:main": "es/index.js",
   "types": "es/index.d.ts",
   "scripts": {
     "clean": "rimraf commonjs es umd coverage",
