--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ cache:
   yarn: true
   directories:
     - node_modules
+before_install:
+  - yarn add rxjs --peer
 script: yarn run test:cover
 after_success:
 - cat coverage/lcov.info | ./node_modules/.bin/codecov
