--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "test": "nodemon --watch src --watch spec -e ts --exec \"yarn run test:single\"",
     "test:single": "jasmine --config=jasmine.json",
     "test:cover": "nyc yarn run test:single",
-    "build:commonjs": "yarn run build:commonjs:files && yarn run build:commonjs:copydts",
+    "build:commonjs": "npm-run-all --parallel build:commonjs:files build:commonjs:copydts",
     "build:commonjs:files": "tsc --outDir commonjs --target es5 -m commonjs --mapRoot ../commonjs --declaration",
     "build:commonjs:copydts": "cd src && copyfiles **/*.d.ts ../commonjs",
-    "build:es": "yarn run build:es:files && yarn run build:es:copydts",
+    "build:es": "npm-run-all --parallel build:es:files build:es:copydts",
     "build:es:files": "tsc --outDir es --mapRoot ../es --declaration",
     "build:es:copydts": "cd src && copyfiles **/*.d.ts ../es",
-    "build:umd": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
+    "build:umd": "npm-run-all --parallel build:umd:regular build:umd:min",
+    "build:umd:regular": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack --config=config/webpack.prod.js",
-    "build": "yarn run build:commonjs && yarn run build:es && yarn run build:umd && yarn run build:umd:min",
-    "prepublish": "yarn run clean && yarn run lint && yarn run test:single && yarn run build",
+    "build": "npm-run-all --parallel build:commonjs build:es build:umd",
+    "prepublish": "npm-run-all clean lint test:single build",
     "precommit": "lint-staged"
   },
   "repository": {
