--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "tslint": "^5.2.0",
     "tslint-config-poetez": "^0.1.1",
     "typescript": "^2.3.2",
+    "util.promisify": "^1.0.0",
     "webpack": "^2.5.1"
   },
   "dependencies": {
