--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "jsnext:main": "es/index.js",
   "types": "es/index.d.ts",
   "scripts": {
-    "clean": "rimraf commonjs es umd coverage",
+    "clean": "rimraf dist coverage",
     "lint": "npm-run-all --parallel lint:*",
     "lint:src": "tslint src/**/*.ts --type-check -c tslint.json -p tsconfig.tslint.json -t verbose",
     "lint:spec": "tslint spec/**/*.ts --type-check -c tslint.json -p tsconfig.tslint.json -t verbose",
@@ -15,11 +15,11 @@
     "test:single": "jasmine --config=jasmine.json",
     "test:cover": "nyc yarn run test:single",
     "build:commonjs": "npm-run-all --parallel build:commonjs:files build:commonjs:copydts",
-    "build:commonjs:files": "tsc --outDir commonjs --target es5 -m commonjs --mapRoot ../commonjs --declaration",
-    "build:commonjs:copydts": "cd src && copyfiles **/*.d.ts ../commonjs",
+    "build:commonjs:files": "tsc --outDir dist/cjs --target es5 -m commonjs --mapRoot ../cjs --declaration",
+    "build:commonjs:copydts": "cd src && copyfiles **/*.d.ts ../dist/cjs",
     "build:es": "npm-run-all --parallel build:es:files build:es:copydts",
-    "build:es:files": "tsc --outDir es --mapRoot ../es --declaration",
-    "build:es:copydts": "cd src && copyfiles **/*.d.ts ../es",
+    "build:es:files": "tsc --outDir dist/es --mapRoot ../es --declaration",
+    "build:es:copydts": "cd src && copyfiles **/*.d.ts ../dist/es",
     "build:umd": "npm-run-all --parallel build:umd:regular build:umd:min",
     "build:umd:regular": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack --config=config/webpack.prod.js",
