--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:umd": "npm-run-all --parallel build:umd:regular build:umd:min",
     "build:umd:regular": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack --config=config/webpack.prod.js",
-    "build": "npm-run-all --parallel build:commonjs build:es build:umd",
+    "build": "npm-run-all --parallel build:commonjs",
     "prepublish": "npm-run-all clean lint test:single build",
     "precommit": "lint-staged"
   },
