--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build:umd:regular": "cross-env NODE_ENV=development webpack --config=config/webpack.dev.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack --config=config/webpack.prod.js",
     "build": "npm-run-all --parallel build:commonjs",
-    "prepublish": "npm-run-all clean lint test:single build",
+    "make-packages": "node ./config/make-packages.js",
+    "prepublish": "npm-run-all clean lint test:single build make-packages",
     "precommit": "lint-staged"
   },
   "repository": {
