--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   directories:
     - node_modules
 before_install:
-  - yarn add rxjs --peer
+  - yarn add rxjs --peer --ignore-scripts
 script: yarn run test:cover
 after_success:
 - cat coverage/lcov.info | ./node_modules/.bin/codecov
